@@ -175,6 +175,7 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
       variables.
     - pulsemanager.{cpp,h}: add ESD support.
     - pulsemanager.{cpp,h}: rename relaunch () to restart ().
+    - pulsemanager.cpp: reformat only.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
